# fedsnr-audio

./: README.md  environment.yml  logger_config.py  pyproject.toml  run_flower.sh  run_test.sh  script_tuning.py  seed_utils.py
fed_audio_classification/: __init__.py  client_app.py  config.py  device_utils.py  fl_config.json  main.py  server_app.py  snr_evaluation.py
fed_audio_classification/client/: client.py  client_config.json
fed_audio_classification/custom_strategies/: strategies.py
fed_audio_classification/dataset_utils/: AudioDS.py  UrbanAudioDataset.py
fed_audio_classification/models/: models.py
fed_audio_classification/partition_utils/: class_distribution_analytics.py  partition-generator.py  partitioner_config.json
fed_audio_classification/snr_utils/: snr_processing.py
partitioning_data/: dirichlet-partitioning-metadata.csv  iid-partitioning-metadata.csv
